# erpbrasil.base

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: github-actions.yml  publish.yml  python-tox.yml
ci/: appveyor-download.py  bootstrap.py
docs/: cnpj.rst  conf.py  dfe.rst  index.rst  installation.rst  usage.rst
docs/reference/: erpbrasil.base.rst  index.rst
satcomum/: __init__.py  br.py  constantes.py  ersat.py  util.py
satcomum/test/: conftest.py  test_br.py  test_ersat.py  test_satcomum.py  test_util.py
src/erpbrasil/: __init__.py
src/erpbrasil/base/: __init__.py  __main__.py  br.py  cli.py  constantes.py  fiscal.py  misc.py  util.py
src/erpbrasil/base/fiscal/: bacen.py  chave.py  cnpj_cpf.py  codigo_municipio.py  dfe.py  edoc.py  ie.py  nfse.py  pis.py  recopi.py  suframa.py
src/erpbrasil/base/gs1/: gsin.py  gtin.py  sscc.py
tests/: __init__.py  test_base_fiscal_bacen.py  test_base_fiscal_codigo_municipio.py  test_base_fiscal_recopi_validation.py  test_base_gs1_gsin.py  test_base_gs1_gtin.py  test_base_gs1_sscc.py  test_base_validate_ie.py  test_base_validate_suframa.py  test_chave_edoc.py  test_dfe.py  test_erpbrasil.base.py  test_fiscal_ie_formata.py  test_fiscal_ie_validar.py  test_new_edocs.py  test_tools_fiscal.py  test_tools_misc.py
