[bdist_wheel]

[metadata]
name = erpbrasil.base
version = 2.4.0
license = MIT license
description = Base
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
author = Luis Felipe Mileo
author_email = mileo@kmee.com.br
url = https://github.com/erpbrasil/erpbrasil.base
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities
project_urls =
    Documentation = https://erpbrasilbase.readthedocs.io/
    Changelog = https://erpbrasilbase.readthedocs.io/en/latest/changelog.html
    Issue Tracker = https://github.com/erpbrasil/erpbrasil.base/issues

[options]
packages = find:
package_dir = = src
python_requires = >=3.8
# install_requires =
#   Adicione suas dependências aqui
#   ex: requests>=2.20.0

[options.packages.find]
where = src
namespaces = false

[options.entry_points]
console_scripts =
    erpbrasil.base = erpbrasil.base.cli:main

[flake8]
max-line-length = 140
exclude = */migrations/*
# Conflito entre o Black e Flake8
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices
# This behaviour may raise E203 whitespace before ':' warnings in style guide enforcement tools like Flake8. Since E203 is not PEP 8 compliant, you should tell Flake8 to ignore these warnings.
extend-ignore = E203

[tool:pytest]
testpaths = tests
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120
known_first_party = erpbrasil.base
default_section = THIRDPARTY
forced_separate = test_erpbrasil.base
not_skip = __init__.py
skip = migrations
